--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet restore src/WebApp/WebApp.csproj
 
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore **/*jsproj
 
       - name: Test
         run: dotnet test --no-build
