Add publish step to dotnet CI workflow
Added a publish step to the CI workflow for the WebApp.

--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Test
         run: dotnet test --no-build tests/Webapp.tests/WebApp.Tests.csproj
+        
+      - name: Publish
+        run: dotnet publish src/WebApp/WebApp.csproj -c Release -o publish
