--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -26,7 +26,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore
-        run: dotnet restore src/WebApp/WebApp.csproj
+        run: dotnet restore **/*.csproj
 
       - name: Build
         run: dotnet build --no-restore src/WebApp/WebApp.csproj
