--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -26,7 +26,9 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore
-        run: dotnet restore **/*.csproj
+        run: |
+         shopt -s globstar
+         dotnet restore **/*.csproj --configuration Release
 
       - name: Build
         run: dotnet build --no-restore src/WebApp/WebApp.csproj
