Updating path to WebApp.sln

--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -26,18 +26,16 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore
-        run: |
-         shopt -s globstar
-         dotnet restore **/*.csproj --configuration Release
+        run: restore WebApp.sln
 
       - name: Build
-        run: dotnet build --no-restore src/WebApp/WebApp.csproj
+        run: dotnet build --no-restore WebApp.sln 
 
       - name: Test
-        run: dotnet test --no-build tests/Webapp.tests/WebApp.Tests.csproj
+        run: dotnet test --no-build WebApp.sln
 
       - name: Publish
-        run: dotnet publish src/WebApp/WebApp.csproj -c Release -o publish
+        run: dotnet publish WebApp.sln -c Release -o publish
 
       - name: Upload publish artifacts
         uses: actions/upload-artifact@v4
